--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.88.2",
+    "axios": "^0.24.0",
     "socket.io-client": "^4.4.0"
   }
 }
